# words

./: words.cabal
src/: Lib.hs
test/: Spec.hs
