name:                words
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/glowjan/words#readme
license:             BSD3
license-file:        LICENSE
author:              Janusz Glowiak
maintainer:          janusz.glowiak@gmail.com
copyright:           BSD
category:            Tutorial
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable words
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , words
  default-language:    Haskell2010

test-suite words-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , words
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/words
